@@ -3,6 +3,7 @@ Postgresql connection
  pq_connect
  pq_close
  pq_update_types
+ pq_conninfo
 Postgresql command execution
  pq_exec_params
 Postgresql large objects
